# SimplexMethod

./: .gitignore  CMakeLists.txt  Makefile  README.md  check.txt  input_symmetric.txt
src/: CommonParser.cpp  CommonParser.h  Constants.h  EnumerationSolver.cpp  EnumerationSolver.h  SimplexSolover.h  SimplexSolver.h  SymmetricalParser.cpp  SymmetricalParser.h  main.cpp
src/ProblemTypes/: Canonical.cpp  Canonical.h  Common.cpp  Common.h  IProblem.h  Symmetrical.cpp  Symmetrical.h
tests/: CMakeLists.txt  test_canonical.cpp  test_common.cpp  test_parser.cpp  test_symmetrical.cpp  test_transformations.cpp
